--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-.container {
-
-}
-
 nav {
     background-color: #fff;
     border-bottom: 1px solid #cccccc; 
@@ -80,6 +76,7 @@ h1 {
     padding-bottom: 1rem;
 }
 
+
 .jumbotron {
     background-color: #fff;
     display: inline-block;
@@ -95,14 +92,33 @@ h1 {
 
 img {
     float: left;
+    width: 100%;
+}
+.img-face {
     padding-right: 1rem;
     max-width: 200px;
 }
+
 
 .btn-blue {
     background-color: #59aaa5;
     padding: 0.5rem 1rem; 
     color: #fff;
+}
+
+.card {
+    display: inline-block;
+    max-width: 288px;
+    margin: 1rem;
+}
+
+.badge-label {
+    float: left;
+    position: absolute;
+    left: 0;
+    bottom: 0.5rem;
+    padding: 1rem;
+    width: 100%;
 }
 
 footer {
