--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 nav {
+    margin: -32px -16px;
     background-color: #fff;
     border-bottom: 1px solid #cccccc; 
     /* eventually change to border color  */
@@ -38,6 +39,11 @@ a:hover {
     color: #ccc;
     text-decoration: none;
 }
+/* .background {
+    background-image: url('../images/greyfloral.png');
+    width: 100%;
+    padding: 2rem 1rem 20rem;
+} */
 
 h1 {
     color: #59aaa5;
@@ -52,7 +58,7 @@ h1 {
 }
 
 /* Background pattern */
-.wrapper {
+.container {
     background-image: url('../images/greyfloral.png');
     width: 100%;
     padding: 2rem 1rem 20rem;
@@ -76,7 +82,6 @@ img {
 
 .card {
     display: inline-block;
-    max-width: 288px;
     margin: 1rem;
 }
 
@@ -96,6 +101,7 @@ footer {
     color: #ffffff;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
+    margin: -32px -16px;
 }
 
 
