--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 nav {
-    margin: -32px -16px;
     background-color: #fff;
     border-bottom: 1px solid #cccccc; 
-    /* eventually change to border color  */
+}
+
+.navbar {
+    padding: 0rem 1rem 1rem;
 }
 /* Blue around name */
 .badge {
@@ -20,8 +22,11 @@ nav {
 .btn-group {
     background-color: #fff;
     color: #cccccc;
-    position: absolute;
-    right: 0;
+    top: 8px;
+}
+
+.row {
+    width: 100%;
 }
 
 .btn-secondary:not(:disabled):not(.disabled).active {
@@ -39,15 +44,15 @@ a:hover {
     color: #ccc;
     text-decoration: none;
 }
-/* .background {
-    background-image: url('../images/greyfloral.png');
-    width: 100%;
-    padding: 2rem 1rem 20rem;
-} */
 
 h1 {
     color: #59aaa5;
     padding-bottom: 1rem;
+}
+.background {
+    /* Background pattern */
+    background-image: url('../images/greyfloral.png');
+    width: 100%;
 }
 
 
@@ -55,22 +60,13 @@ h1 {
     background-color: #fff;
     display: inline-block;
     width: 100%;
+    margin-top: 20px;
 }
 
-/* Background pattern */
-.container {
-    background-image: url('../images/greyfloral.png');
-    width: 100%;
-    padding: 2rem 1rem 20rem;
-}
-
-img {
+.img-face{
     float: left;
-    width: 100%;
-}
-.img-face {
-    padding-right: 1rem;
-    max-width: 200px;
+    max-width: 150px;
+    margin: 5px 10px 10px 10px;
 }
 
 
