--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,11 @@ h1 {
 p {
     text-indent: 20px;
 }
+
+article {
+    margin-bottom: 2rem;
+}
+
 .background {
     /* Background pattern */
     background-image: url('../images/greyfloral.png');
@@ -64,7 +69,7 @@ p {
     background-color: #fff;
     display: inline-block;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 2rem;
 }
 
 .img-face{
